4th Class - 9 & 10 & 11 revised

--- a/9. ANN.ipynb
+++ b/9. ANN.ipynb
@@ -1752,7 +1752,7 @@
    "id": "a4fd56ce",
    "metadata": {},
    "source": [
-    "Churn - Tenure "
+    "### Churn - Tenure "
    ]
   },
   {
@@ -1805,10 +1805,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8219797b",
+   "metadata": {},
+   "source": [
+    "#### interpretation\n",
+    "Here, we can see that the tendency of churn and the tenure is inversely proportional. When tenure increases, the tendency to churn decreases while the tendency not to churn increases. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0f6c0d62",
    "metadata": {},
    "source": [
-    "Churn - Monthly Charges"
+    "### Churn - Monthly Charges"
    ]
   },
   {
@@ -4036,7 +4045,8 @@
    "id": "895061b3",
    "metadata": {},
    "source": [
-    "Accuracy"
+    "### Accuracy\n",
+    "manual calcuation"
    ]
   },
   {
